# afforestation

./: .gitignore  README.md  baseline.py  constants.py  plot_afforestation.py  requirements.txt  setup.cfg  setup.py
analysis/: __init__.py  __main__.py  baseline.py  cdo_calc_load.py  cmip_files.py  constants.py  cstock_stats.py  jaisnb.py  plot_afforestation.py  plot_atmosphere.py  plot_australia.py  plot_histograms.py  plot_land_cover_fractions.py  plot_model_trees.py  plot_models.py  plot_models_co2.py  plot_models_tas.py  plot_ocean.py  plot_regions.py  plot_temp_lai.py  tas_tree_correlation.py  tree_albedo_correlation.py  tree_evap_correlation.py  tree_lhf_correlation.py  tree_shf_correlation.py
contrib/: extract_co2mass_vn3.py
data/: README.md
doc/: afforestation_draft.tex  afforestation_references.bib  si_template_2019.tex
plots/: README.md
