[metadata]
name = analysis
version = 0.0.1
author = Tammas Loughran
author_email = tammas.loughran@csiro.au
description = Analysis of afforestation ACCESS-ESM1.5
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/tammasloughran/afforestation
license = CSIRO Non-Commercial Source Code Licence Agreement v1.0
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = analysis
install_requires =
    cdo
    matplotlib
    netCDF4
    numpy
    xarray
